// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic-handlebars.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<script id="entry-template" type="text/x-handlebars-template">
  <div class="entry">
    <h1>{{title}}</h1>
    <div class="body">
      {{body}}
    </div>
  </div>
</script>

<div class="{{hello}} {{world}}"></div>

=====================================output=====================================
<script id="entry-template" type="text/x-handlebars-template">
  <div class="entry">
    <h1>
      {{title}}
    </h1>
    <div class="body">
      {{body}}
    </div>
  </div>
</script>
<div class="{{hello}} {{world}}"></div>
================================================================================
`;

exports[`nested-path.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<div class="entry">
  <h1>{{title}}</h1>
  <h2>By {{author.name}}</h2>

  <div class="body">
    {{body}}
  </div>
</div>

=====================================output=====================================
<div class="entry">
  <h1>
    {{title}}
  </h1>
  <h2>
    By {{author.name}}
  </h2>
  <div class="body">
    {{body}}
  </div>
</div>
================================================================================
`;

exports[`raw.hbs 1`] = `
====================================options=====================================
parsers: ["glimmer"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<p>{{{raw}}}</p>

=====================================output=====================================
<p>
  {{{raw}}}
</p>
================================================================================
`;
